<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonBrowseItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_items" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonBrowseItems"
        android:layout_marginTop="16dp"
        android:text="@string/search"/>

    <Button
        android:id="@+id/buttonViewOrderHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSearch"
        android:layout_marginTop="16dp"
        android:text="@string/order_history" />

</RelativeLayout>