<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonUploadItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_item" />

    <Button
        android:id="@+id/buttonManageListings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonUploadItem"
        android:layout_marginTop="16dp"
        android:text="@string/manage_listings" />

    <Button
        android:id="@+id/buttonViewSales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonManageListings"
        android:layout_marginTop="16dp"
        android:text="@string/view_sales" />

</RelativeLayout>